--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: '1.20'
 load: STARTUP
 authors: [siea]
 website: https://projects.siea.dev/collections
+commands:
+  collections:
+    permission: collections.create
+    description: Create collections
