--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,2 +1,2 @@
 levelUp: "&6&lCongratulations! &eYou reached Level &6&l%level% &ein &a%collection%!"
-unlocked: "&6Hey There! &eYou unlocked the &a%collection%! &ecollection"
+unlocked: "&6Hey There! &eYou unlocked the &a%collection% &ecollection"
