Implemented MYSQL database support

--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,10 @@
             <version>24.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 </project>
