Added GUI's for Creation

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,28 @@
-# Collections 1.0
-# made with <3 by sieadev
+###################################################################
+# +-------------------------------------------------------------+ #
+# |                         Collections                         | #
+# |                   Made with <3 by sieadev                   | #
+# +-------------------------------------------------------------+ #
+###################################################################
 
-# ----------------------- STORAGE -----------------------
+###################################################################
+# -------------------------- Donate <3 -------------------------- #
+# ------------------ https://ko-fi.com/sieadev ------------------ #
+###################################################################
+
+###################################################################
+# --------------------------- STORAGE --------------------------- #
+###################################################################
 storage: "MYSQL"
 database:
   ip: ""
   name: ""
   user: ""
   password: ""
+
+###################################################################
+# --------------------- Language / Messages --------------------- #
+###################################################################
+# All messages can be individually modified in "messages.yml".
+# Language support with presets will be added in the future.
+# Stay tuned!
