--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,2 +1,8 @@
 levelUp: "&6&lCongratulations! &eYou reached Level &6&l%level% &ein &a%collection%!"
 unlocked: "&6Hey There! &eYou unlocked the &a%collection% &ecollection"
+leftCreation: "§cYou left the collection creator"
+notAPlayer: "§cYou must be a player to use this command"
+
+# Command descriptions
+overviewCommand: "View your active collections"
+createCommand: "Open the collections creator page"
